--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "bsb",
   "version": "1.0",
-  "description": "Banco seguro do brasil",
-  "main": "bsb-cliente.js",
+  "description": "Banco seguro do Brasil",
+  "main": "main.js",
   "repository": "https://github.com/luizfilho00/bsb.git",
   "author": "Luiz Filho",
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "sqlite-sync": "^0.3.8"
+    "nodemon": "^1.18.11",
+    "sqlite-sync": "^0.3.8",
+    "yarn": "^1.15.2"
+  },
+  "scripts": {
+    "start": "node main.js"
   }
 }
